--- a/index.html
+++ b/index.html
@@ -7,19 +7,77 @@
 </head>
 <body>
     <div class="header-container">
+        <div class="upper-header">
+            <div class="header-logo">
+                Header Logo
+            </div>
+            <div class="header-links one"><a href="">header link one</a></div>
+            <div class="header-links two"><a href="">header link two</a></div>
+            <div class="header-links three"><a href="">header link three</a></div>
+        </div>
+        <div class="lower-header">
+            <div class="left-section">
+               <Header>This website is awesome</Header>
+               <p>This website has some subtext that goes here under the main title.  It's a smaller font and color is lower contrast</p>
+               <button class="sign-up">Sign up</button>
+
+            </div>
+            <div class="right-section">
+                this is a placeholder for an image
+            </div>
+        </div>
 
     </div>
     <div class="content-container">
-
+        <h2 class="subtitle">
+            Some random information
+        </h2>
+        <div class="image-subtext first">
+            <div class="image"></div>
+            <div class="subtext">
+                this is some subtext under an illustration or image
+            </div>
+        </div>
+        <div class="image-subtext second">
+            <div class="image"></div>
+            <div class="subtext">
+                this is some subtext under an illustration or image
+            </div>
+        </div>
+        <div class="image-subtext third">
+            <div class="image"></div>
+            <div class="subtext">
+                this is some subtext under an illustration or image
+            </div>
+        </div>
+        <div class="image-subtext fourth">
+            <div class="image"></div>
+            <div class="subtext">
+                this is some subtext under an illustration or image
+            </div>
+        </div>
     </div>
     <div class="quote-container">
-
+        <h3 class="quote">
+            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+        </h3>
+        <h4 class="person">
+            -Thor, God of Thunder
+        </h4>
     </div>
     <div class="signup-container">
-
+        <div class="signup-left">
+            <h4>
+                Call to action! It's time!
+            </h4>
+            <p>Sign up for our product by clicking the button right over there!</p>
+        </div>
+        <div class="signup-right">
+            <button>Sign up</button>
+        </div>
     </div>
     <div class="footer">
-        
+        Copyright &copy; The Odin Project 2021
     </div>
 </body>
 </html>
