Fix the html structure then add the proper styling
Fixed the html file so that the styling can work
easily, styled the heading section

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Landing Page</title>
 </head>
 <body>
@@ -11,23 +12,25 @@
             <div class="header-logo">
                 Header Logo
             </div>
-            <div class="header-links one"><a href="">header link one</a></div>
-            <div class="header-links two"><a href="">header link two</a></div>
-            <div class="header-links three"><a href="">header link three</a></div>
+            <div class="links">
+                <div class="link-one"><a href="">header link one</a></div>
+                <div class="link-two"><a href="">header link two</a></div>
+                <div class="link-three"><a href="">header link three</a></div>
+            </div>
         </div>
+            
         <div class="lower-header">
             <div class="left-section">
-               <Header>This website is awesome</Header>
-               <p>This website has some subtext that goes here under the main title.  It's a smaller font and color is lower contrast</p>
-               <button class="sign-up">Sign up</button>
-
+                <Header class="hero">This website is awesome</Header>
+                <p class="hero-secondary">This website has some subtext that goes here under the main title.  It's a smaller font and color is lower contrast</p>
+                <button class="sign-up">Sign up</button>
             </div>
             <div class="right-section">
-                this is a placeholder for an image
+                <img class="PC-image" src="Images/Work-Desktop.jpg" alt="Image of a desktop pc">
             </div>
         </div>
 
-    </div>
+    <!-- </div>
     <div class="content-container">
         <h2 class="subtitle">
             Some random information
@@ -78,6 +81,6 @@
     </div>
     <div class="footer">
         Copyright &copy; The Odin Project 2021
-    </div>
+    </div> -->
 </body>
 </html>
