--- a/index.html
+++ b/index.html
@@ -30,37 +30,39 @@
             </div>
         </div>
 
-    <!-- </div>
+    </div>
     <div class="content-container">
         <h2 class="subtitle">
             Some random information
         </h2>
-        <div class="image-subtext first">
-            <div class="image"></div>
-            <div class="subtext">
-                this is some subtext under an illustration or image
+        <di class="subtext-content">
+            <div class="image-subtext first">
+                <div class="image"><img src="Images/pexels-danny-meneses-340146-943096.jpg" alt="PC with code on the screen and lit keyboard"></div>
+                <div class="subtext">
+                    this is some subtext under an illustration or image
+                </div>
             </div>
-        </div>
-        <div class="image-subtext second">
-            <div class="image"></div>
-            <div class="subtext">
-                this is some subtext under an illustration or image
+            <div class="image-subtext second">
+                <div class="image"><img src="Images/view-messy-office-workspace-with-personal-computer.jpg" alt="Messy desk with a locked PC"></div>
+                <div class="subtext">
+                    this is some subtext under an illustration or image
+                </div>
             </div>
-        </div>
-        <div class="image-subtext third">
-            <div class="image"></div>
-            <div class="subtext">
-                this is some subtext under an illustration or image
+            <div class="image-subtext third">
+                <div class="image"><img src="Images/rgb-keyboard-setup.jpg" alt="Keyboard with a lit keyboard and a person using the navigation keys"></div>
+                <div class="subtext">
+                    this is some subtext under an illustration or image
+                </div>
             </div>
-        </div>
-        <div class="image-subtext fourth">
-            <div class="image"></div>
-            <div class="subtext">
-                this is some subtext under an illustration or image
+            <div class="image-subtext fourth">
+                <div class="image"><img src="Images/Closing-pc.jpg" alt="Pc being closed after a day's work"></div>
+                <div class="subtext">
+                    this is some subtext under an illustration or image
+                </div>
             </div>
-        </div>
+        </di>
     </div>
-    <div class="quote-container">
+    <!--<div class="quote-container">
         <h3 class="quote">
             This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
         </h3>
