Update the content section with images and style accordingly

--- a/index.html
+++ b/index.html
@@ -37,25 +37,25 @@
         </h2>
         <di class="subtext-content">
             <div class="image-subtext first">
-                <div class="image"><img src="Images/pexels-danny-meneses-340146-943096.jpg" alt="PC with code on the screen and lit keyboard"></div>
+                <div class="image"><img class="illustrations" src="Images/pexels-danny-meneses-340146-943096.jpg" alt="PC with code on the screen and lit keyboard"></div>
                 <div class="subtext">
                     this is some subtext under an illustration or image
                 </div>
             </div>
             <div class="image-subtext second">
-                <div class="image"><img src="Images/view-messy-office-workspace-with-personal-computer.jpg" alt="Messy desk with a locked PC"></div>
+                <div class="image"><img class="illustrations" src="Images/view-messy-office-workspace-with-personal-computer.jpg" alt="Messy desk with a locked PC"></div>
                 <div class="subtext">
                     this is some subtext under an illustration or image
                 </div>
             </div>
             <div class="image-subtext third">
-                <div class="image"><img src="Images/rgb-keyboard-setup.jpg" alt="Keyboard with a lit keyboard and a person using the navigation keys"></div>
+                <div class="image"><img class="illustrations" src="Images/rgb-keyboard-setup.jpg" alt="Keyboard with a lit keyboard and a person using the navigation keys"></div>
                 <div class="subtext">
                     this is some subtext under an illustration or image
                 </div>
             </div>
             <div class="image-subtext fourth">
-                <div class="image"><img src="Images/Closing-pc.jpg" alt="Pc being closed after a day's work"></div>
+                <div class="image"><img class="illustrations" src="Images/Closing-pc.jpg" alt="Pc being closed after a day's work"></div>
                 <div class="subtext">
                     this is some subtext under an illustration or image
                 </div>
