--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
         </di>
     </div>
-    <!--<div class="quote-container">
+    <div class="quote-container">
         <h3 class="quote">
             This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
         </h3>
@@ -81,7 +81,7 @@
             <button>Sign up</button>
         </div>
     </div>
-    <div class="footer">
+    <!--<div class="footer">
         Copyright &copy; The Odin Project 2021
     </div> -->
 </body>
