Add the call to action section

--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
             <p>Sign up for our product by clicking the button right over there!</p>
         </div>
         <div class="signup-right">
-            <button>Sign up</button>
+            <button class="call-to-action">Sign up</button>
         </div>
     </div>
-    <!--<div class="footer">
+    <div class="footer">
         Copyright &copy; The Odin Project 2021
-    </div> -->
+    </div>
 </body>
 </html>
